--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    height: 100%
+    height: 100%;
 }
 
 h1 {
@@ -30,41 +30,45 @@ h6 {
     font-size: .75em;
 }
 
-.grid-container{
+.grid-container {
     min-height: 100%;
     display: grid;
     grid-template-columns: 25% 1fr;
     grid-template-rows: 1fr auto;
     grid-template-areas: 
-        'sidebar main'
-        'footer footer'     
+        'sidebar main' 
+        'footer footer'
+        ;
 }
 
-#sidebar{
+#sidebar {
     grid-area: sidebar;
-    background: rgba(46, 46, 46, 1)
+    background: rgba(46, 46, 46, 1);
+    color:white;
 }
 
-#image-wrapper{
+#image-wrapper {
     height: 14em;
     width: 14em;
     overflow: hidden;
     border: 3px solid black;
     /* background: radial-gradient(circle, white, teal); */
-    border-radius: 50%;    
+    border-radius: 50%;
+    
 }
 
-#headshot{
+#headshot {
     height: 15em;
     width: auto;
     transform: scaleX(-1);
     mix-blend-mode: screen;
 }
 
-#main-content{
+#main-content {
     grid-area: main;
+    align-self: center;
+    text-align: center;
 }
-
 
 #footer {
     grid-area: footer;
